objects/Obj5__c.object
<CustomObject>
    <fields>
        <fullName>DateField__c</fullName>
        <label>DateField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhoneField__c</fullName>
        <label>PhoneField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Obj5</label>
    <nameField>
        <label>Obj5 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj5s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Testrul1</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>Pleaase snter a valid name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidationRule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>Please Enter a  valid  name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidationRule2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>Please Enter a name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidationRule3</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>Please enter a name</errorMessage>
    </validationRules>
</CustomObject>